I18N-1240 - Migrate to Spring boot 3.3.1 (#134)
Spring Boot was migrated from 3.2.7 to 3.3.1